@@ -579,6 +579,7 @@ Major new features in this release
 
 All:
 
+- Fix silent data loss in wx[F]File::Write(wxString) if conversion fails.
 - Make wxString::FromCDouble() work when the global C++ locale is not the C one.
 
 wxMSW:
